// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`async state update 1`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    <p>
      0
    </p>
    <p>
      0
    </p>
  </div>
</DocumentFragment>
`;

exports[`async state update 2`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    <p>
      2
    </p>
    <p>
      2
    </p>
  </div>
</DocumentFragment>
`;

exports[`circular 1`] = `
<DocumentFragment>
  0 | 1
  <button>
    increment
  </button>
</DocumentFragment>
`;

exports[`circular 2`] = `
<DocumentFragment>
  1 | 1
  <button>
    increment
  </button>
</DocumentFragment>
`;

exports[`create lazy model 1`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    <p>
      0
    </p>
    <p>
      0
    </p>
  </div>
</DocumentFragment>
`;

exports[`create lazy model 2`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    <p>
      1
    </p>
    <p>
      1
    </p>
  </div>
</DocumentFragment>
`;

exports[`createModel with arg 1`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    <p>
      5
    </p>
  </div>
</DocumentFragment>
`;

exports[`createModel with arg 2`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    <p>
      6
    </p>
  </div>
</DocumentFragment>
`;

exports[`depending 1`] = `
<DocumentFragment>
  0 | 1
  <button>
    increment
  </button>
</DocumentFragment>
`;

exports[`depending 2`] = `
<DocumentFragment>
  1 | 1
  <button>
    increment
  </button>
</DocumentFragment>
`;

exports[`setState timing 1`] = `
<DocumentFragment>
  <div>
    <p>
      1
    </p>
  </div>
</DocumentFragment>
`;

exports[`simple 1`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    <p>
      0
    </p>
    <p>
      0
    </p>
  </div>
</DocumentFragment>
`;

exports[`simple 2`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    <p>
      1
    </p>
    <p>
      1
    </p>
  </div>
</DocumentFragment>
`;

exports[`withModel 1`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    0
  </div>
</DocumentFragment>
`;

exports[`withModel 2`] = `
<DocumentFragment>
  <div>
    <button>
      Change
    </button>
    1
  </div>
</DocumentFragment>
`;
